--- a/starter/style.css
+++ b/starter/style.css
@@ -45,7 +45,7 @@ body {
   /* overflow: hidden; */
 }
 
-.neighbor::before {
+.neighbour::before {
   content: 'Neighbor country';
   width: 100%;
   position: absolute;
@@ -58,7 +58,7 @@ body {
   color: #888;
 }
 
-.neighbor {
+.neighbour {
   transform: scale(0.8) translateY(1rem);
   margin-left: 0;
 }
